--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
    ],
    "source": [
     "yell_hello = \"hello, there\" # \"HELLO, THERE\"\n",
-    "yell_hello"
+    "yell_hello.lower()"
    ]
   },
   {
