--- a/index.ipynb
+++ b/index.ipynb
@@ -24,23 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hello, there'"
+       "'HELLO, THERE'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yell_hello = \"hello, there\" # \"HELLO, THERE\"\n",
-    "yell_hello.lower()"
+    "yell_hello.upper()"
    ]
   },
   {
