Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,23 +45,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'PSST, HEY'"
+       "'psst, hey'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "whisper_hey = \"PSST, HEY\" # \"psst, hey\"\n",
-    "whisper_hey"
+    "whisper_hey.lower()"
    ]
   },
   {
