Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,23 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'LEARN. LOVE. CODE.'"
+       "'Learn. Love. Code.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "flatiorn_mantra = \"LEARN. LOVE. CODE.\" # \"Learn. Love. Code\"\n",
-    "flatiorn_mantra"
+    "flatiorn_mantra.title()"
    ]
   },
   {
