Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,12 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type_string = \"i'm a string\" # str\n",
-    "type_string"
+    "type(type_string)"
    ]
   },
   {
@@ -102,7 +113,7 @@
    "outputs": [],
    "source": [
     "type_list = [\"i'm\", \"a\", \"list\"] # list\n",
-    "type_list"
+    "tytype_list"
    ]
   },
   {
