--- a/index.ipynb
+++ b/index.ipynb
@@ -108,22 +108,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type_list = [\"i'm\", \"a\", \"list\"] # list\n",
-    "tytype_list"
+    "type(type_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lenght_of_list = [\"i'm\", \"a\", \"list\"] # 3\n",
-    "lenght_of_list"
+    "len(lenght_of_list)"
    ]
   },
   {
