Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,20 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True False False\n"
+      "True True False\n"
      ]
     }
    ],
    "source": [
     "number_compare = 10 <= 10 # True\n",
-    "number_compare2 = -20 > 30 # True\n",
+    "number_compare2 = -20 < 30 # True\n",
     "number_compare3 = 4 == 5 # False\n",
     "print(number_compare, number_compare2, number_compare3)"
    ]
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# string_compare = \"stacy\" [COMPARISON] \"STACY\" # True\n",
+    "string_compare = \"stacy\"  \"STACY\" # True\n",
     "# string_compare2 = \"hey i love python!\" [COMPARISON] \"hi love python\" # False\n",
     "# string_compare3 = \"this string is bigger than the other\" [COMPARISON] \"that is true\" # True\n",
     "# print(string_compare, string_compare2, string_compare3)"
