--- a/index.ipynb
+++ b/index.ipynb
@@ -306,17 +306,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_compare3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-3f1946720319>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# list_compare4 = [0,0,3,0] [COMPARISON] [0,0,3] # True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# list_compare5 = [0,0,4,0] [COMPARISON] [0,0,3] # False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_compare\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_compare2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_compare3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_compare4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_compare5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'list_compare3' is not defined"
+     ]
+    }
+   ],
    "source": [
     "list_compare = [0,0,0,0] is not [0,0,0] # True\n",
     "list_compare2 = [1,0,0] is not [0,0,0] # True\n",
-    "# list_compare3 = [0,0,0] [COMPARISON] [0,0,3] # False\n",
-    "# list_compare4 = [0,0,3,0] [COMPARISON] [0,0,3] # True\n",
-    "# list_compare5 = [0,0,4,0] [COMPARISON] [0,0,3] # False\n",
+    "list_compare3 = [0,0,0] < [0,0,3] # False\n",
+    "list_compare4 = [0,0,3,0] [COMPARISON] [0,0,3] # True\n",
+    "list_compare5 = [0,0,4,0] [COMPARISON] [0,0,3] # False\n",
     "print(list_compare, list_compare2, list_compare3, list_compare4, list_compare5)"
    ]
   },
