--- a/index.ipynb
+++ b/index.ipynb
@@ -364,8 +364,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logical_compare = 2  [] # []\n",
-    "# logical_compare2 = [COMPARISON] [] # True\n",
+    "logical_compare = 2 is [] # []\n",
+    "logical_compare2 = is [] # True\n",
     "# logical_compare3 = 0 [COMPARISON] [] # 0\n",
     "# logical_compare4 = True [COMPARISON] 2 # 2\n",
     "# logical_compare5 = 2 [COMPARISON] 3 # 2\n",
