--- a/index.ipynb
+++ b/index.ipynb
@@ -360,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] True True\n"
+      "[] True True 2\n"
      ]
     }
    ],
@@ -375,11 +375,11 @@
     "logical_compare = 2 and [] # []\n",
     "logical_compare2 = not [] # True\n",
     "logical_compare3 = 0 is not [] # 0\n",
-    "# logical_compare4 = True [COMPARISON] 2 # 2\n",
+    "logical_compare4 = True and 2 # 2\n",
     "# logical_compare5 = 2 [COMPARISON] 3 # 2\n",
     "# logical_compare6 = [COMPARISON] True # False\n",
     "# logical_compare7 = False [COMPARISON] 2 # False\n",
-    "print(logical_compare, logical_compare2, logical_compare3)\n",
+    "print(logical_compare, logical_compare2, logical_compare3, logical_compare4)\n",
     "# print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
     "#       logical_compare5, logical_compare6, logical_compare7)"
    ]
