Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -360,14 +360,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[] True True 2 2\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-32-5d8ef9a6f260>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-5d8ef9a6f260>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    logical_compare6 = or True # False\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -377,9 +378,9 @@
     "logical_compare3 = 0 is not [] # 0\n",
     "logical_compare4 = True and 2 # 2\n",
     "logical_compare5 = 2 or 3 # 2\n",
-    "logical_compare6 = is True # False\n",
+    "logical_compare6 = [COMPARISON] True # False\n",
     "# logical_compare7 = False [COMPARISON] 2 # False\n",
-    "print(logical_compare, logical_compare2, logical_compare3, logical_compare4, logical_compare5, )\n",
+    "print(logical_compare, logical_compare2, logical_compare3, logical_compare4, logical_compare5)\n",
     "# print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
     "#       logical_compare5, logical_compare6, logical_compare7)"
    ]
