--- a/index.ipynb
+++ b/index.ipynb
@@ -360,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] True True 2 2 False\n"
+      "[] True True 2 2 False False\n"
      ]
     }
    ],
@@ -378,10 +378,9 @@
     "logical_compare4 = True and 2 # 2\n",
     "logical_compare5 = 2 or 3 # 2\n",
     "logical_compare6 = not True # False\n",
-    "# logical_compare7 = False [COMPARISON] 2 # False\n",
-    "print(logical_compare, logical_compare2, logical_compare3, logical_compare4, logical_compare5, logical_compare6)\n",
-    "# print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
-    "#       logical_compare5, logical_compare6, logical_compare7)"
+    "logical_compare7 = False is 2 # False\n",
+    "print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
+    "       logical_compare5, logical_compare6, logical_compare7)"
    ]
   },
   {
