--- a/index.ipynb
+++ b/index.ipynb
@@ -360,21 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[] True True 2 2 False False\n"
+      "[] True 0 2 2 False False\n"
      ]
     }
    ],
    "source": [
     "logical_compare = 2 and [] # []\n",
     "logical_compare2 = not [] # True\n",
-    "logical_compare3 = 0 is not [] # 0\n",
+    "logical_compare3 = 0 and [] # 0\n",
     "logical_compare4 = True and 2 # 2\n",
     "logical_compare5 = 2 or 3 # 2\n",
     "logical_compare6 = not True # False\n",
