--- a/index.ipynb
+++ b/index.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
     "logical_compare4 = True and 2 # 2\n",
     "logical_compare5 = 2 or 3 # 2\n",
     "logical_compare6 = not True # False\n",
-    "logical_compare7 = False is 2 # False\n",
+    "logical_compare7 = False and 2 # False\n",
     "print(logical_compare, logical_compare2, logical_compare3, logical_compare4,\n",
     "       logical_compare5, logical_compare6, logical_compare7)"
    ]
@@ -396,9 +396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a = []\n",
-    "# b = a\n",
-    "# identity_compare = {} [COMPARISON] {} # False\n",
+    "a = []\n",
+    "b = a\n",
+    "identity_compare = {} [COMPARISON] {} # False\n",
     "# identity_compare2 = a [COMPARISON] b # True\n",
     "# identity_compare3 = b [COMPARISON] [] # True\n",
     "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
