--- a/index.ipynb
+++ b/index.ipynb
@@ -398,10 +398,10 @@
    "source": [
     "a = []\n",
     "b = a\n",
-    "identity_compare = {} [COMPARISON] {} # False\n",
-    "# identity_compare2 = a [COMPARISON] b # True\n",
-    "# identity_compare3 = b [COMPARISON] [] # True\n",
-    "# identity_compare4 = 9 [COMPARISON] 10 # True\n",
+    "identity_compare = {} is not {} # False\n",
+    "identity_compare2 = a is b # True\n",
+    "identity_compare3 = b is [] # True\n",
+    "identity_compare4 = 9 [COMPARISON] 10 # True\n",
     "# identity_compare5 = \"Same\" [COMPARISON] \"Same\" # False\n",
     "# identity_compare6 = [1,3,4] [COMPARISON] [1,2,3] # False\n",
     "# print(identity_compare, identity_compare2, identity_compare3,\n",
