--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -392,28 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False True True True False False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = []\n",
     "b = a\n",
-    "identity_compare = {} is {} # False\n",
+    "identity_compare = {} is not {} # False\n",
     "identity_compare2 = a is b # True\n",
-    "identity_compare3 = b is not [] # True\n",
+    "identity_compare3 = b is [] # True\n",
     "identity_compare4 = 9 is not 10 # True\n",
     "identity_compare5 = \"Same\" is not \"Same\" # False\n",
     "identity_compare6 = [1,3,4] is [1,2,3] # False\n",
     "print(identity_compare, identity_compare2, identity_compare3,\n",
-    "       identity_compare4, identity_compare5, identity_compare6)"
+    "#       identity_compare4, identity_compare5, identity_compare6)"
    ]
   },
   {
